Ensure there is adequate spacing between the header and body

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -42,4 +42,7 @@ html, body {
 
 main {
 	min-height: calc(100vh - var(--miles-footer-size));
+	>.container > h1 {
+		margin-top: 2rem;
+	}
 }
